--- a/src/app/common/paging/pageable-table/pageable-table.component.html
+++ b/src/app/common/paging/pageable-table/pageable-table.component.html
@@ -4,7 +4,7 @@
 			<div class="table" [ngClass]="{'card': showInCard, 'compact-table': !showInCard}" [hidden]="items?.length === 0">
 
 				<div *ngIf="showHeader" class="table-header" [ngClass]="{'table-actions' : null != actionTemplate}">
-					<ng-template *ngIf="showActions" [asy-transclude]="actionTemplate"></ng-template>
+					<ng-template *ngIf="showActions" [transclusion]="actionTemplate"></ng-template>
 
 					<!-- Paging -->
 					<div [hidden]="items?.length === 0">
@@ -34,7 +34,7 @@
 					<table class="mean2starter table table-condensed table-hover">
 						<thead>
 						<tr>
-							<ng-template [asy-transclude]="headerTemplate"></ng-template>
+							<ng-template [transclusion]="headerTemplate"></ng-template>
 						</tr>
 						</thead>
 
@@ -42,7 +42,7 @@
 						<tr *ngFor="let item of items; let i = index" class="table-row">
 							<ng-template
 								*ngIf="rowTemplate"
-								[asy-transclude]="rowTemplate"
+								[transclusion]="rowTemplate"
 								[item]="item"
 								[index]="i">
 							</ng-template>
@@ -86,11 +86,11 @@
 			<section *ngIf="!loading" class="card card-message">
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 center">
-						<ng-template [asy-transclude]="emptyTableTemplate"></ng-template>
+						<ng-template [transclusion]="emptyTableTemplate"></ng-template>
 					</div>
 
 					<div class="padding-top-10 col-md-12 pull left">
-						<ng-template [asy-transclude]="footerTemplate"></ng-template>
+						<ng-template [transclusion]="footerTemplate"></ng-template>
 					</div>
 				</div>
 			</section>
