Reorganizing common directives and pipes into their own directory. Fixing issue with transclusion of template for Admin User Listing

--- a/src/app/common/paging/pageable-table/pageable-table.component.html
+++ b/src/app/common/paging/pageable-table/pageable-table.component.html
@@ -31,7 +31,7 @@
 
 				<div *ngIf="!pagedPastAllowed" class="table-content" [ngClass]="{'padding-top-10' : null != actionTemplate}">
 					<!-- Actual Results -->
-					<table class="mean2starter table table-condensed table-hover">
+					<table class="table table-condensed table-hover">
 						<thead>
 						<tr>
 							<ng-template [transclusion]="headerTemplate"></ng-template>
