--- a/src/app/common/paging/sort-controls/sort-controls.component.html
+++ b/src/app/common/paging/sort-controls/sort-controls.component.html
@@ -2,7 +2,7 @@
 	<span *ngIf="showHeader" class="control-label">Sort By:</span>
 	<span *ngFor="let option of sortOptions | keys; let i = index">
 		<span *ngIf="i > 0"> / </span>
-		<a type="button" class="no-href"
+		<button type="button" class="btn btn-sm btn-link"
 		   [class.selected]="selectedKey === option.value.sortField"
 		   (click)="updateSort(option.key)">{{ option.value.label }}
 			<span *ngIf="showDirectionControl && selectedKey === option.value.sortField" style="display: inline-block">
@@ -11,6 +11,6 @@
 				<i *ngIf="selectedDir==='ASC'"
 				   class="fa fa-sort-amount-asc"></i>
 			</span>
-		</a>
+		</button>
 	</span>
 </div>
