Fixing dropdown toggle caret to use font awesome icon vs. css class

--- a/src/app/site/admin/user-management/admin-list-users.component.html
+++ b/src/app/site/admin/user-management/admin-list-users.component.html
@@ -71,8 +71,8 @@
 		<div class="col-md-12">
 			<div class="btn-group pull-right dropdown" dropdown>
 				<button type="button" class="btn btn-sm btn-outline-secondary" (click)="exportCurrentView()"><i class="fa fa-download"></i> Export </button>
-				<button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle" dropdownToggle>
-					<span class="caret"></span>
+				<button type="button" class="btn btn-sm btn-outline-secondary" dropdownToggle>
+					<i class="fa fa-caret-down"></i>
 				</button>
 				<ul *dropdownMenu class="dropdown-menu" role="menu">
 					<li><a (click)="exportCurrentView()">Export Current View</a></li>
