--- a/src/app/site/admin/user-management/admin-list-users.component.html
+++ b/src/app/site/admin/user-management/admin-list-users.component.html
@@ -8,52 +8,38 @@
 		</button>
 	</h3>
 
-	<!-- Search Input -->
-	<div class="row">
-		<div class="col-md-10">
-			<div class="input-group input-group-sm">
-				<input placeholder="Enter a search..." type="text" class="form-control" [(ngModel)]="search" (keyup.enter)="applySearch()">
-				<div class="input-group-append">
-					<button class="btn btn-outline-secondary" type="button" (click)="applySearch()">
-						<i class="fa fa-search"></i>
-					</button>
+	<div class="row padding-top-5">
+		<div class="col-md-2">
+
+			<!-- Quick Filters -->
+			<div class="card">
+				<div class="form-check form-check-inline">
+					<label class="form-check-label">Quick Filters:</label>
+				</div>
+				<div class="form-check form-check-inline">
+					<input class="form-check-input" type="checkbox" [(ngModel)]="filters.bypassAC" (ngModelChange)="applySearch()">
+					<label class="form-check-label" (click)="filters.bypassAC = !filters.bypassAC; applySearch()">Bypass AC</label>
+				</div>
+				<div class="form-check form-check-inline">
+					<input class="form-check-input" type="checkbox" [(ngModel)]="filters.editorRole" (ngModelChange)="applySearch()"/>
+					<label class="form-check-label">Editor</label>
+				</div>
+				<div class="form-check form-check-inline">
+					<input class="form-check-input" type="checkbox" [(ngModel)]="filters.auditorRole" (ngModelChange)="applySearch()"/>
+					<label class="form-check-label">Auditor</label>
+				</div>
+				<div class="form-check form-check-inline">
+					<input class="form-check-input" type="checkbox" [(ngModel)]="filters.adminRole" (ngModelChange)="applySearch()"/>
+					<label class="form-check-label">Admin</label>
+				</div>
+				<div class="form-check form-check-inline">
+					<input class="form-check-input" type="checkbox" [(ngModel)]="filters.pending" (ngModelChange)="applySearch()"/>
+					<label class="form-check-label">Pending</label>
 				</div>
 			</div>
-		</div>
-	</div>
-
-	<!-- Quick Filters -->
-	<div class="controls paging-sort padding-top-10">
-		<div class="form-check form-check-inline">
-			<label class="form-check-label">Quick Filters:</label>
-		</div>
-		<div class="form-check form-check-inline">
-			<input class="form-check-input" type="checkbox" [(ngModel)]="filters.bypassAC" (ngModelChange)="applySearch()">
-			<label class="form-check-label" (click)="filters.bypassAC = !filters.bypassAC; applySearch()">Bypass AC</label>
-		</div>
-		<div class="form-check form-check-inline">
-			<input class="form-check-input" type="checkbox" [(ngModel)]="filters.editorRole" (ngModelChange)="applySearch()"/>
-			<label class="form-check-label">Editor</label>
-		</div>
-		<div class="form-check form-check-inline">
-			<input class="form-check-input" type="checkbox" [(ngModel)]="filters.auditorRole" (ngModelChange)="applySearch()"/>
-			<label class="form-check-label">Auditor</label>
-		</div>
-		<div class="form-check form-check-inline">
-			<input class="form-check-input" type="checkbox" [(ngModel)]="filters.adminRole" (ngModelChange)="applySearch()"/>
-			<label class="form-check-label">Admin</label>
-		</div>
-		<div class="form-check form-check-inline">
-			<input class="form-check-input" type="checkbox" [(ngModel)]="filters.pending" (ngModelChange)="applySearch()"/>
-			<label class="form-check-label">Pending</label>
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="col-md-12">
 
 			<!-- Column Selector -->
-			<div class="controls paging-sort" [hidden]="users.length === 0">
+			<div class="card margin-top-10" [hidden]="users.length === 0">
 				<span class="column-label">Columns (
 					<button class="btn btn-sm btn-link" type="button" [ngClass]="{selected: columnMode==='default'}" (click)="quickColumnSelect('default')">Default</button> /
 					<button class="btn btn-sm btn-link" type="button" [ngClass]="{selected: columnMode==='all'}" (click)="quickColumnSelect('all')">All</button> ):
@@ -65,89 +51,109 @@
 			</div>
 
 		</div>
-	</div>
 
-	<div class="row">
-		<div class="col-md-12">
-			<div class="btn-group pull-right dropdown" dropdown>
-				<button type="button" class="btn btn-sm btn-outline-secondary" (click)="exportCurrentView()"><i class="fa fa-download"></i> Export </button>
-				<button type="button" class="btn btn-sm btn-outline-secondary" dropdownToggle>
-					<i class="fa fa-caret-down"></i>
-				</button>
-				<ul *dropdownMenu class="dropdown-menu" role="menu">
-					<li><a (click)="exportCurrentView()">Export Current View</a></li>
-					<li><a (click)="exportUserData()">Export Single Field</a></li>
-				</ul>
+		<div class="col-md-10">
+
+			<!-- Search Input -->
+			<div class="row">
+				<div class="col-md-12">
+					<div class="input-group input-group-sm">
+						<input placeholder="Enter a search..." type="text" class="form-control" [(ngModel)]="search" (keyup.enter)="applySearch()">
+						<div class="input-group-append">
+							<button class="btn btn-outline-secondary" type="button" (click)="applySearch()">
+								<i class="fa fa-search"></i>
+							</button>
+						</div>
+					</div>
+				</div>
 			</div>
+
+			<!-- Export -->
+			<div class="row padding-top-10">
+				<div class="col-md-12">
+					<div class="btn-group pull-right dropdown" dropdown>
+						<button type="button" class="btn btn-sm btn-outline-secondary" (click)="exportCurrentView()"><i class="fa fa-download"></i> Export </button>
+						<button type="button" class="btn btn-sm btn-outline-secondary" dropdownToggle>
+							<i class="fa fa-caret-down"></i>
+						</button>
+						<ul *dropdownMenu class="dropdown-menu" role="menu">
+							<li><a (click)="exportCurrentView()">Export Current View</a></li>
+							<li><a (click)="exportUserData()">Export Single Field</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<sort-controls
+				[sortOptions]="sortOpts">
+			</sort-controls>
+
+			<pageable-table [items]="users"
+				[pagingOptions]="pagingOpts"
+				(onPageChange)="goToPage($event)"
+				(onSortChange)="setSort($event)">
+
+				<ng-template named-template="table-header">
+					<th *ngFor="let key of columnKeys" [hidden]="!columns[key].show">{{columns[key].title}}</th>
+					<th>&nbsp;</th>
+				</ng-template>
+
+				<ng-template named-template="table-row" let-user let-i="index">
+					<td [hidden]="!columns.name.show">{{user.userModel.name}}</td>
+					<td [hidden]="!columns.username.show" style="min-width: 200px;max-width: 200px;"><div class="hide-overflow" style="max-width:400px;">{{user.userModel.username}}</div></td>
+					<td [hidden]="!columns._id.show">{{user.userModel._id}}</td>
+					<td [hidden]="!columns.teams.show">
+						<div class="hide-overflow" style="max-width: 300px;">
+							<span *ngFor="let team of user.userModel.teams; let last = last" [attr.title]="team._id">{{ teamMap[team._id] }}{{ last? '' : ', ' }}</span>
+						</div>
+					</td>
+					<td [hidden]="!columns.organization.show">{{user.userModel.organization}}</td>
+					<td [hidden]="!columns.email.show">{{user.userModel.email}}</td>
+					<td [hidden]="!columns.phone.show">{{user.userModel.phone}}</td>
+					<td [hidden]="!columns.acceptedEua.show">{{user.userModel.acceptedEua | agoDate:false}}</td>
+					<td [hidden]="!columns.lastLogin.show">{{user.userModel.lastLogin | agoDate:false}}</td>
+					<td [hidden]="!columns.created.show">{{user.userModel.created | agoDate:false}}</td>
+					<td [hidden]="!columns.updated.show">{{user.userModel.updated | agoDate:false}}</td>
+
+					<td [hidden]="!columns.bypassAccessCheck.show" class="center">
+						<i class="fa fa-fw" disabled [ngClass]="{'fa-check-square-o': user.userModel.bypassAccessCheck, 'fa-square-o': !user.userModel.bypassAccessCheck }"></i>
+					</td>
+
+					<td [hidden]="!columns.externalRoles.show" class="hide-overflow" style="max-width:200px;">{{user.userModel.externalRoles}}</td>
+					<td [hidden]="!columns.externalGroups.show" class="hide-overflow" style="max-width:200px;">{{user.userModel.externalGroups}}</td>
+
+					<td [hidden]="!columns.roles.show" style="min-width: 310px;max-width: 310px;">
+						<div class="btn-group">
+							<button *ngFor="let role of possibleRoles"
+									type="button" class="btn btn-sm btn-outline-secondary" disabled
+									[ngClass]="{ 'btn-selected': user.userModel.roles && user.userModel.roles[role.role], 'btn-unselected': !user.userModel.roles || !user.userModel.roles[role.role] }"
+									[attr.title]="role.description">
+								<i class="fa fa-fw" [ngClass]="{ 'fa-check-square-o': user.userModel.roles && user.userModel.roles[role.role], 'fa-square-o': !user.userModel.roles || !user.userModel.roles[role.role] }"></i>
+								{{role.label}}
+							</button>
+						</div>
+					</td>
+
+					<td style="min-width: 80px;max-width: 80px;">
+						<div class="btn-group pull-right">
+							<button title="Edit" [routerLink]="['/admin/user', user.userModel._id]" type="button" class="btn btn-sm btn-outline-secondary">
+								<span class="fa fa-edit"></span>
+							</button>
+							<button title="Delete" type="button" class="btn btn-sm btn-outline-secondary" (click)="confirmDeleteUser(user)">
+								<span class="fa fa-trash-o"></span>
+							</button>
+						</div>
+					</td>
+				</ng-template>
+
+				<ng-template named-template='empty-table'>
+					<h3>
+						<small>No Users matched your search</small>
+					</h3>
+				</ng-template>
+			</pageable-table>
+
 		</div>
+
 	</div>
-
-	<sort-controls
-		[sortOptions]="sortOpts">
-	</sort-controls>
-
-	<pageable-table [items]="users"
-		[pagingOptions]="pagingOpts"
-		(onPageChange)="goToPage($event)"
-		(onSortChange)="setSort($event)">
-
-		<ng-template named-template="table-header">
-			<th *ngFor="let key of columnKeys" [hidden]="!columns[key].show">{{columns[key].title}}</th>
-			<th>&nbsp;</th>
-		</ng-template>
-
-		<ng-template named-template="table-row" let-user let-i="index">
-			<td [hidden]="!columns.name.show">{{user.userModel.name}}</td>
-			<td [hidden]="!columns.username.show" style="min-width: 200px;max-width: 200px;"><div class="hide-overflow" style="max-width:400px;">{{user.userModel.username}}</div></td>
-			<td [hidden]="!columns._id.show">{{user.userModel._id}}</td>
-			<td [hidden]="!columns.teams.show">
-				<div class="hide-overflow" style="max-width: 300px;">
-					<span *ngFor="let team of user.userModel.teams; let last = last" [attr.title]="team._id">{{ teamMap[team._id] }}{{ last? '' : ', ' }}</span>
-				</div>
-			</td>
-			<td [hidden]="!columns.organization.show">{{user.userModel.organization}}</td>
-			<td [hidden]="!columns.email.show">{{user.userModel.email}}</td>
-			<td [hidden]="!columns.phone.show">{{user.userModel.phone}}</td>
-			<td [hidden]="!columns.acceptedEua.show">{{user.userModel.acceptedEua | agoDate:false}}</td>
-			<td [hidden]="!columns.lastLogin.show">{{user.userModel.lastLogin | agoDate:false}}</td>
-			<td [hidden]="!columns.created.show">{{user.userModel.created | agoDate:false}}</td>
-			<td [hidden]="!columns.updated.show">{{user.userModel.updated | agoDate:false}}</td>
-
-			<td [hidden]="!columns.bypassAccessCheck.show" class="center">
-				<i class="fa fa-fw" disabled [ngClass]="{'fa-check-square-o': user.userModel.bypassAccessCheck, 'fa-square-o': !user.userModel.bypassAccessCheck }"></i>
-			</td>
-
-			<td [hidden]="!columns.externalRoles.show" class="hide-overflow" style="max-width:200px;">{{user.userModel.externalRoles}}</td>
-			<td [hidden]="!columns.externalGroups.show" class="hide-overflow" style="max-width:200px;">{{user.userModel.externalGroups}}</td>
-
-			<td [hidden]="!columns.roles.show" style="min-width: 310px;max-width: 310px;">
-				<div class="btn-group">
-					<button *ngFor="let role of possibleRoles"
-							type="button" class="btn btn-sm btn-outline-secondary" disabled
-							[ngClass]="{ 'btn-selected': user.userModel.roles && user.userModel.roles[role.role], 'btn-unselected': !user.userModel.roles || !user.userModel.roles[role.role] }"
-							[attr.title]="role.description">
-						<i class="fa fa-fw" [ngClass]="{ 'fa-check-square-o': user.userModel.roles && user.userModel.roles[role.role], 'fa-square-o': !user.userModel.roles || !user.userModel.roles[role.role] }"></i>
-						{{role.label}}
-					</button>
-				</div>
-			</td>
-
-			<td style="min-width: 80px;max-width: 80px;">
-				<div class="btn-group pull-right">
-					<button title="Edit" [routerLink]="['/admin/user', user.userModel._id]" type="button" class="btn btn-sm btn-outline-secondary">
-						<span class="fa fa-edit"></span>
-					</button>
-					<button title="Delete" type="button" class="btn btn-sm btn-outline-secondary" (click)="confirmDeleteUser(user)">
-						<span class="fa fa-trash-o"></span>
-					</button>
-				</div>
-			</td>
-		</ng-template>
-
-		<ng-template named-template='empty-table'>
-			<h3>
-				<small>No Users matched your search</small>
-			</h3>
-		</ng-template>
-	</pageable-table>
 </section>
