--- a/src/app/common/paging/pageable-table/pageable-table.component.html
+++ b/src/app/common/paging/pageable-table/pageable-table.component.html
@@ -85,7 +85,7 @@
 
 			<section *ngIf="!loading" class="card card-message">
 				<div class="row">
-					<div class="col-md-6 col-md-offset-3 center">
+					<div class="col-md-6 offset-md-3 center">
 						<ng-template [transclusion]="emptyTableTemplate"></ng-template>
 					</div>
 
