--- a/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
@@ -3,9 +3,9 @@
 	<h3 class="page-header">
 		EUAs
 		<small>Administer End User Agreements</small>
-		<a [routerLink]="['/admin/eua']" type="button" class="btn btn-default btn-sm pull-right">
+		<button [routerLink]="['/admin/eua']" type="button" class="btn btn-sm btn-primary pull-right">
 			<i class="fa fa-plus"></i> Create EUA
-		</a>
+		</button>
 	</h3>
 
 	<div class="row padding-top-5">
@@ -23,13 +23,13 @@
 			<!-- Search Input -->
 			<div class="row">
 				<div class="col-md-12">
-					<div class="input-group">
-						<input placeholder="Enter a search..." type="text" class="form-control input-sm" [(ngModel)]="search" (keyup.enter)="applySearch()">
-						<span class="input-group-btn">
-							<button class="btn btn-default btn-sm" type="button" (click)="applySearch()">
+					<div class="input-group input-group-sm">
+						<input placeholder="Enter a search..." type="text" class="form-control" [(ngModel)]="search" (keyup.enter)="applySearch()">
+						<div class="input-group-append">
+							<button class="btn btn-outline-secondary" type="button" (click)="applySearch()">
 								<i class="fa fa-search"></i>
 							</button>
-						</span>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -59,10 +59,19 @@
 					<td [hidden]="!columns.published.show">{{ eua.euaModel.published | utcDate }}</td>
 
 					<td style="width: 120px;">
-						<div class="pull-right">
-							<a title="Edit" [routerLink]="['/admin/eua',eua.euaModel._id]" type="button" class="btn btn-default btn-sm"><span class="fa fa-edit"></span></a>
-							<button title="Publish" type="button" class="btn btn-default btn-sm" (click)="publishEua(eua)"><i class="fa fa-share-square-o"></i></button>
-							<button title="Delete" type="button" class="btn btn-danger btn-sm" (click)="confirmDeleteEua(eua)"><span class="fa fa-trash-o"></span></button>
+						<div class="btn-group btn-group-sm pull-right">
+							<button title="Edit" [routerLink]="['/admin/eua',eua.euaModel._id]"
+								type="button" class="btn btn-outline-secondary">
+								<span class="fa fa-edit"></span>
+							</button>
+							<button title="Publish" (click)="publishEua(eua)"
+								type="button" class="btn btn-primary">
+								<span class="fa fa-share-square-o"></span>
+							</button>
+							<button title="Delete" (click)="confirmDeleteEua(eua)"
+								type="button" class="btn btn-danger">
+								<span class="fa fa-trash-o"></span>
+							</button>
 						</div>
 					</td>
 				</ng-template>
