Adding "link" class to Give Feedback menu item in order to allow for hover styling

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -126,7 +126,8 @@
 					</li>
 
 					<!-- Feedback -->
-					<li><a (click)="showFeedbackModal();helpNavPopover.hide()">Give Feedback</a></li>
+					<li><a class="link"
+						(click)="showFeedbackModal();helpNavPopover.hide()">Give Feedback</a></li>
 
 					<!-- About -->
 					<li>
