--- a/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
@@ -4,7 +4,7 @@
 		EUAs
 		<small>Administer End User Agreements</small>
 		<button [routerLink]="['/admin/eua']" type="button" class="btn btn-sm btn-primary pull-right">
-			<i class="fa fa-plus"></i> Create EUA
+			<span class="fa fa-plus"></span> Create EUA
 		</button>
 	</h3>
 
@@ -27,7 +27,7 @@
 						<input placeholder="Enter a search..." type="text" class="form-control" [(ngModel)]="search" (keyup.enter)="applySearch()">
 						<div class="input-group-append">
 							<button class="btn btn-outline-secondary" type="button" (click)="applySearch()">
-								<i class="fa fa-search"></i>
+								<span class="fa fa-search"></span>
 							</button>
 						</div>
 					</div>
